--- a/public/a.html
+++ b/public/a.html
@@ -81,29 +81,35 @@
 
     /**
      * פונקציה משופרת לחילוץ מערך JSON של נתונים מתוך טקסט גולמי מעורב.
-     * הפונקציה מחפשת את המופע הגדול ביותר שנראה כמו מערך JSON ([{...}]).
+     * כוללת ניקוי של "פסיקים מיותרים" (Trailing Commas) שאינם חוקיים ב-JSON
      * @param {string} rawText - הטקסט הגולמי של הקובץ (למשל, קובץ HTML).
      * @returns {Array<Object>} מערך האובייקטים של האנשים.
      * @throws {Error} אם לא נמצא JSON תקין.
      */
     function extractFamilyData(rawText) {
-      // ביטוי רגולרי לחיפוש מערך שמתחיל ב- '[' ואחריו לפחות אובייקט אחד שמתחיל ב- '{' ומסתיים ב- '}]'
-      // משתמש ב-[\s\S]* כדי להתאים לתווי שורה חדשה וכל תו אחר.
-      // החיפוש הוא 'רעב' (greedy) כדי לתפוס את המערך הגדול ביותר האפשרי.
-      const jsonRegex = /(\[\s*\{[\s\S]*?\}\s*\])/;
+      // 1. ביטוי רגולרי גרידי לחיפוש מערך שמתחיל ב- '[' ואחריו לפחות אובייקט אחד שמתחיל ב- '{' ומסתיים ב- '}]'
+      // [[\s\S]*] - מחפש את הבלוק הגדול ביותר בין הסוגריים המרובעים החיצוניים.
+      const jsonRegex = /(\[\s*\{[\s\S]*\}\s*\])/; 
       const match = rawText.match(jsonRegex);
 
       if (match && match[1]) {
+        let jsonString = match[1].trim();
+
+        // 2. ניקוי: הסרת פסיקים מיותרים (Trailing Commas) הנפוצים ב-JS אך לא חוקיים ב-JSON.
+        // מחפש פסיק ואחריו רווחים ואז סוגר מסולסל/מרובע.
+        jsonString = jsonString.replace(/,\s*([\]}])/g, '$1');
+
         try {
-          const jsonString = match[1].trim();
           const data = JSON.parse(jsonString);
           
           if (Array.isArray(data) && data.length > 0) {
             return data;
           }
         } catch (e) {
-          console.error("שגיאת ניתוח JSON:", e);
-          throw new Error("הנתונים חולצו אך אינם במבנה JSON תקין.");
+          console.error("שגיאת ניתוח JSON לאחר חילוץ וניקוי:", e);
+          // ניתן להציג חלקיק מהמחרוזת שנכשלה לצורך איתור באגים נוסף
+          // console.log("JSON String that failed to parse (first 500 chars):", jsonString.substring(0, 500));
+          throw new Error("הנתונים חולצו אך עדיין אינם במבנה JSON תקין, גם לאחר ניקוי פסיקים מיותרים. בדוק את מבנה הקובץ המקורי.");
         }
       }
       
@@ -152,7 +158,7 @@
           if (!p || typeof p !== 'object') return false;
           
           const hasValidGender = p.gender && (p.gender === "M" || p.gender === "F");
-          // birth_year נחשב תקין אם הוא מספר בין 1500 לשנה הנוכחית, או שהוא null (אם כי רק מספרים מעובדים)
+          // birth_year נחשב תקין אם הוא מספר בין 1500 לשנה הנוכחית.
           const isBirthYearValid = typeof p.birth_year === 'number' && p.birth_year > 1500 && p.birth_year <= new Date().getFullYear();
           
           return hasValidGender || isBirthYearValid;
