--- a/public/book.html
+++ b/public/book.html
@@ -78,7 +78,7 @@
             // הגדרת הגרסאות לטעינה בסדר עדיפות: גרסה רגילה, גרסה 2, ואז גרסת ברירת מחדל
             const versions = [
                 { id: 'V1', url: `books/${familySide}.html`, name: 'הגרסה הראשית' },
-                { id: 'V2', url: `books/${familySide}-v2.html`, name: 'גרסה 2' },
+                { id: 'V2', url: `books/${familySide}.html`, name: 'גרסה 2' },
                 { id: 'V3', url: `books/default.html`, name: 'גרסת ברירת מחדל' }
             ];
 
@@ -184,7 +184,7 @@
                 // הגדרת המיפוי מחדש כדי ליצור קישורים
                 const versionMap = {
                     'V1': { url: `books/${familySide}.html`, name: 'הגרסה הראשית' },
-                    'V2': { url: `books/${familySide}-v2.html`, name: 'גרסה 2' },
+                    'V2': { url: `books/${familySide}.html`, name: 'גרסה 2' },
                     'V3': { url: `books/default.html`, name: 'גרסת ברירת מחדל' }
                 };
 
