--- a/public/book.html
+++ b/public/book.html
@@ -77,7 +77,7 @@
         async function tryLoadBookVersions(familySide) {
             // הגדרת הגרסאות לטעינה בסדר עדיפות: גרסה רגילה, גרסה 2, ואז גרסת ברירת מחדל
             const versions = [
-                { id: 'V1', url: `books/${familySide}.html`, name: 'הגרסה הראשית' },
+                { id: 'V1', url: `books2/${familySide}.html`, name: 'הגרסה הראשית' },
                 { id: 'V2', url: `books/${familySide}.html`, name: 'גרסה 2' },
                 { id: 'V3', url: `books/default.html`, name: 'גרסת ברירת מחדל' }
             ];
@@ -183,7 +183,7 @@
                 const familySide = user.familySide; // נוחות
                 // הגדרת המיפוי מחדש כדי ליצור קישורים
                 const versionMap = {
-                    'V1': { url: `books/${familySide}.html`, name: 'הגרסה הראשית' },
+                    'V1': { url: `books2/${familySide}.html`, name: 'הגרסה הראשית' },
                     'V2': { url: `books/${familySide}.html`, name: 'גרסה 2' },
                     'V3': { url: `books/default.html`, name: 'גרסת ברירת מחדל' }
                 };
