--- a/public/contact.html
+++ b/public/contact.html
@@ -1,18 +1,85 @@
 <!DOCTYPE html>
-<html lang="he" dir="rtl">
+<html lang="en" dir="ltr">
 <head>
-  <meta charset="UTF-8">
-  <title>צור קשר</title>
-  <link rel="stylesheet" href="style.css">
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Contact Us - Secure Form</title>
+    <!-- Loading Tailwind CSS for modern and responsive design -->
+    <script src="https://cdn.tailwindcss.com"></script>
+    <style>
+        /* Global Inter font setting */
+        body { font-family: 'Inter', sans-serif; }
+    </style>
 </head>
-<body>
-  <h1>📬 צור קשר</h1>
-  <form action="mailto:yairben2013@gmail.com" method="POST">
-    <label>שם: <input type="text" name="name"></label><br>
-    <label>אימייל: <input type="email" name="email"></label><br>
-    <label>הודעה: <textarea name="message"></textarea></label><br>
-    <button type="submit">שליחה</button>
-  </form>
-  <p><a href="index.html">חזרה לעמוד הבית</a></p>
+<body class="bg-gray-50 flex items-center justify-center min-h-screen p-4">
+    <div class="w-full max-w-lg bg-white p-8 md:p-10 shadow-xl rounded-xl border border-gray-100">
+
+        <!-- Header -->
+        <h1 class="text-3xl font-extrabold text-gray-800 mb-6 text-center">
+            📬 Contact Us
+        </h1>
+        <p class="text-gray-600 mb-8 text-center">
+            Please fill out the form below and we will get back to you shortly.
+        </p>
+
+        <!-- Contact Form -->
+        <!-- NOTE: The action is set to a placeholder HTTPS endpoint. You must replace this with a real secure form service endpoint. -->
+        <form action="https://formsubmit.co/el/godopu" method="POST" class="space-y-6">
+
+            <!-- Name Field -->
+            <div>
+                <label for="name" class="block text-sm font-medium text-gray-700 mb-1">Full Name:</label>
+                <input
+                    type="text"
+                    id="name"
+                    name="name"
+                    required
+                    placeholder="Your Name"
+                    class="mt-1 block w-full px-4 py-2 border border-gray-300 rounded-lg shadow-sm focus:ring-indigo-500 focus:border-indigo-500 transition duration-150"
+                >
+            </div>
+
+            <!-- Email Field -->
+            <div>
+                <label for="email" class="block text-sm font-medium text-gray-700 mb-1">Email:</label>
+                <input
+                    type="email"
+                    id="email"
+                    name="email"
+                    required
+                    placeholder="you@example.com"
+                    class="mt-1 block w-full px-4 py-2 border border-gray-300 rounded-lg shadow-sm focus:ring-indigo-500 focus:border-indigo-500 transition duration-150"
+                >
+            </div>
+
+            <!-- Message Field -->
+            <div>
+                <label for="message" class="block text-sm font-medium text-gray-700 mb-1">Message:</label>
+                <textarea
+                    id="message"
+                    name="message"
+                    rows="4"
+                    required
+                    placeholder="Type your message here..."
+                    class="mt-1 block w-full px-4 py-2 border border-gray-300 rounded-lg shadow-sm focus:ring-indigo-500 focus:border-indigo-500 transition duration-150 resize-none"
+                ></textarea>
+            </div>
+
+            <!-- Submit Button -->
+            <button
+                type="submit"
+                class="w-full flex justify-center py-3 px-4 border border-transparent rounded-lg shadow-md text-lg font-medium text-white bg-indigo-600 hover:bg-indigo-700 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-indigo-500 transition duration-150 ease-in-out transform hover:scale-[1.01]"
+            >
+                Send Message
+            </button>
+        </form>
+
+        <!-- Back Link -->
+        <div class="mt-8 text-center">
+            <a href="index.html" class="text-sm text-indigo-600 hover:text-indigo-800 transition duration-150 font-medium">
+                ← Back to Home Page
+            </a>
+        </div>
+    </div>
 </body>
 </html>
