--- a/public/forum.html
+++ b/public/forum.html
@@ -313,7 +313,16 @@
         import { getFirestore, collection, addDoc, onSnapshot, serverTimestamp, doc, updateDoc, arrayUnion, arrayRemove, setDoc, getDoc } from "https://www.gstatic.com/firebasejs/11.6.1/firebase-firestore.js";
 
         // Global variables for Firebase configuration and app ID
-        const firebaseConfig = JSON.parse(typeof __firebase_config !== 'undefined' ? __firebase_config : '{}');
+        const firebaseConfig = {
+  apiKey: "AIzaSyB99bQpokjpcuXilwu3usXoOFLmegkVnb4",
+  authDomain: "family-gallery-d707d.firebaseapp.com",
+  projectId: "family-gallery-d707d",
+  storageBucket: "family-gallery-d707d.firebasestorage.app",
+  messagingSenderId: "227810040631",
+  appId: "1:227810040631:web:6bc0dc9a983fac04e4d8b2",
+  measurementId: "G-84CYX5S1F3"
+};
+
         const appId = typeof __app_id !== 'undefined' ? __app_id : 'default-app-id';
         const initialAuthToken = typeof __initial_auth_token !== 'undefined' ? __initial_auth_token : null; 
 
