--- a/public/index.html
+++ b/public/index.html
@@ -89,7 +89,6 @@
         <a id="menuBio" href="/biographies.html" class="flex items-center gap-1 bg-blue-50 text-blue-900 font-semibold text-sm md:text-base px-3 py-2 rounded-xl transition-all duration-200 hover:bg-blue-100 hover:scale-105 shadow-md"><span>📖</span> ביוגרפיות</a>
         <a id="menuStats" href="/family-stats.html" class="flex items-center gap-1 bg-blue-50 text-blue-900 font-semibold text-sm md:text-base px-3 py-2 rounded-xl transition-all duration-200 hover:bg-blue-100 hover:scale-105 shadow-md"><span>📊</span> סטטיסטיקות</a>
         <a id="menuUpdate" href="/update-request.html" class="flex items-center gap-1 bg-blue-50 text-blue-900 font-semibold text-sm md:text-base px-3 py-2 rounded-xl transition-all duration-200 hover:bg-blue-100 hover:scale-105 shadow-md">עדכון פרטים</a>
-        <a id="menuUploadPhoto" href="/upload-photo.html" class="flex items-center gap-1 bg-blue-50 text-blue-900 font-semibold text-sm md:text-base px-3 py-2 rounded-xl transition-all duration-200 hover:bg-blue-100 hover:scale-105 shadow-md">העלאת תמונות</a>
         <a id="menuUploadVideo" href="/upload-video.html" class="flex items-center gap-1 bg-blue-50 text-blue-900 font-semibold text-sm md:text-base px-3 py-2 rounded-xl transition-all duration-200 hover:bg-blue-100 hover:scale-105 shadow-md">העלאת סרטון</a>
         <a id="menuSearchAI" href="/search-ai.html" class="flex items-center gap-1 bg-blue-50 text-blue-900 font-semibold text-sm md:text-base px-3 py-2 rounded-xl transition-all duration-200 hover:bg-blue-100 hover:scale-105 shadow-md">חיפוש AI</a>
         <a id="menuMigration" href="/migration-map.html" class="flex items-center gap-1 bg-blue-50 text-blue-900 font-semibold text-sm md:text-base px-3 py-2 rounded-xl transition-all duration-200 hover:bg-blue-100 hover:scale-105 shadow-md">מפת נדודים</a>
@@ -118,7 +117,7 @@
                 <li class="p-4 bg-gray-100 rounded-lg shadow-sm transition-all duration-300 hover:bg-blue-50 hover:shadow-md">🌐 תפריט רב-לשוני</li>
                 <li class="p-4 bg-gray-100 rounded-lg shadow-sm transition-all duration-300 hover:bg-blue-50 hover:shadow-md">🔍 חיפוש חכם</li>
                 <!-- FIX: Replaced broken character with the correct emoji -->
-                <li class="p-4 bg-gray-100 rounded-lg shadow-sm transition-all duration-300 hover:bg-blue-50 hover:shadow-md">📧 תמיכה בניוזלטר</li>
+                <li class="p-4 bg-gray-100 rounded-lg shadow-sm transition-all duration-300 hover:bg-blue-50 hover:shadow-md">📧ניוזליטור משפחתי</li>
                 <li class="p-4 bg-gray-100 rounded-lg shadow-sm transition-all duration-300 hover:bg-blue-50 hover:shadow-md">🤖 צ’אט AI משפחתי עם תמיכה בנתוני משפחה</li>
                 <li class="p-4 bg-gray-100 rounded-lg shadow-sm transition-all duration-300 hover:bg-blue-50 hover:shadow-md">📱 תמיכה בעיצוב רספונסיבי לנייד</li>
             </ul>
@@ -164,7 +163,7 @@
                 footerText: "© 2025 אתר המשפחה • נבנה באהבה ע\"י המשפחה •",
                 adminLink: "🛠️ ניהול",
                 // FIX: Corrected syntax errors (missing commas, misplaced characters) in the menus array.
-                menus: ["🏠 עמוד ראשי", "ℹ️ עמוד העדכונים", "🧬 עץ המשפחה", "📖 ספר משפחתי", "🧑‍💻 צ'אט AI", "📩 אמצעי תקשורת משפחתיים", "🖼️ גלריית תמונות", "🕯️ קיר זיכרון", "🗓️ ציר זמן", "📆 לוח שנה", "👪 פורום משפחתי", "📖 ביוגרפיות", "📊 סטטיסטיקות", "עדכון פרטים", "העלאת תמונות", "העלאת סרטון", "חיפוש AI", "מפת נדודים", "📰 עלון", "🔐 כניסת משתמשים", "התנתקות"],
+                menus: ["🏠 עמוד ראשי", "ℹ️ עמוד העדכונים", "🧬 עץ המשפחה", "📖 ספר משפחתי", "🧑‍💻 צ'אט AI", "📩 אמצעי תקשורת משפחתיים", "🖼️ גלריית תמונות", "🕯️ קיר זיכרון", "🗓️ ציר זמן", "📆 לוח שנה", "👪 פורום משפחתי", "📖 ביוגרפיות", "📊 סטטיסטיקות", "עדכון פרטים", "העלאת סרטון", "חיפוש AI", "מפת נדודים", "📰 עלון", "🔐 כניסת משתמשים", "התנתקות"],
                 loggedInAs: "מחובר/ת כ:", role: "תפקיד:", familySide: "צד משפחתי:", guest: "אורח"
             },
             en: {
@@ -183,7 +182,7 @@
                 footerText: "© 2025 Family Website • Built with love by the family •",
                 adminLink: "🛠️ Admin",
                  // FIX: Corrected syntax errors (missing commas) in the menus array.
-                menus: ["🏠 Home", "ℹ️ Updates", "🧬 Family Tree", "📖 Family Book", "🧑‍💻 AI Chat", "📩 Family Contacts", "🖼️ Gallery", "🕯️ Memorial Wall", "🗓️ Timeline", "📆 Calendar", "👪 Family Forum", "📖 Biographies", "📊 Statistics", "Update Details", "Upload Photo", "Upload Video", "AI Search", "Migration Map", "📰 Newsletter", "🔐 Login", "Logout"],
+                menus: ["🏠 Home", "ℹ️ Updates", "🧬 Family Tree", "📖 Family Book", "🧑‍💻 AI Chat", "📩 Family Contacts", "🖼️ Gallery", "🕯️ Memorial Wall", "🗓️ Timeline", "📆 Calendar", "👪 Family Forum", "📖 Biographies", "📊 Statistics", "Update Details", "Upload Video", "AI Search", "Migration Map", "📰 Newsletter", "🔐 Login", "Logout"],
                 loggedInAs: "Logged in as:", role: "Role:", familySide: "Family Side:", guest: "Guest"
             },
             fr: {
@@ -202,7 +201,7 @@
                 footerText: "© 2025 Site de la famille • Construit avec amour par la famille •",
                 adminLink: "🛠️ Admin",
                  // FIX: Corrected syntax errors (missing commas) in the menus array.
-                menus: ["🏠 Accueil", "ℹ️ Mises à jour", "🧬 Arbre généalogique", "📖 livre de famille", "🧑‍💻 Chat IA", "📩 Contacts familiaux", "🖼️ Galerie", "🕯️ Mur commémoratif", "🗓️ Chronologie", "📆 Calendrier", "👪 Forum familial", "📖 Biographies", "📊 Statistiques", "Mettre à jour", "Téléverser photo", "Téléverser vidéo", "Recherche IA", "Carte migrations", "📰 Bulletin", "🔐 Connexion", "Déconnexion"],
+                menus: ["🏠 Accueil", "ℹ️ Mises à jour", "🧬 Arbre généalogique", "📖 livre de famille", "🧑‍💻 Chat IA", "📩 Contacts familiaux", "🖼️ Galerie", "🕯️ Mur commémoratif", "🗓️ Chronologie", "📆 Calendrier", "👪 Forum familial", "📖 Biographies", "📊 Statistiques", "Mettre à jour", "Téléverser vidéo", "Recherche IA", "Carte migrations", "📰 Bulletin", "🔐 Connexion", "Déconnexion"],
                 loggedInAs: "Connecté(e) en tant que:", role: "Rôle:", familySide: "Côté de la famille:", guest: "Invité"
             },
             yi: {
@@ -221,7 +220,7 @@
                 footerText: "© 2025 פאמיליע וועבזייט • געבויט מיט ליבע דורך די פאמיליע •",
                 adminLink: "🛠️ אדמין",
                 // FIX: Corrected syntax errors (missing commas) in the menus array.
-                menus: ["🏠 הויפּט בלאַט", "ℹ️ דערהייבונגען", "🧬 פאמיליע בוים", "📖 משפּחה בוך", "🧑‍💻 אינטעליגענט טשאַט", "📩 פאמיליע קאנטאקטן", "🖼️ גאלעריע", "🕯️ אנדענק וואנט", "🗓️ צייט-ליניע", "📆 קאלענדאר", "👪 פאמיליע פארום", "📖 ביאגראפיעס", "📊 סטאטיסטיק", "דערהייבן דעטאלן", "הייבן בילד", "הייבן ווידעא", "אינטעליגענט זוך", "מאַפּע פון וואַנדערונגען", "📰 נייַבלאַט", "🔐 איינזיין", "אויסלאגן"],
+                menus: ["🏠 הויפּט בלאַט", "ℹ️ דערהייבונגען", "🧬 פאמיליע בוים", "📖 משפּחה בוך", "🧑‍💻 אינטעליגענט טשאַט", "📩 פאמיליע קאנטאקטן", "🖼️ גאלעריע", "🕯️ אנדענק וואנט", "🗓️ צייט-ליניע", "📆 קאלענדאר", "👪 פאמיליע פארום", "📖 ביאגראפיעס", "📊 סטאטיסטיק", "דערהייבן דעטאלן", "הייבן ווידעא", "אינטעליגענט זוך", "מאַפּע פון וואַנדערונגען", "📰 נייַבלאַט", "🔐 איינזיין", "אויסלאגן"],
                 loggedInAs: "אריינגעזען ווי:", role: "ראָלע:", familySide: "פאמיליע זייט:", guest: "גאַסט"
             }
         };
