--- a/public/index.html
+++ b/public/index.html
@@ -150,7 +150,7 @@
             he: {
                 title: "אתר המשפחה - Ben Abou, Elharrar ועוד",
                 welcomeTitle: "ברוכים הבאים לאתר המשפחה",
-                welcomeSubtitle: "Ben Abou • Elharrar • Malka • ועוד",
+                welcomeSubtitle: "בן אבו • ברומברג • אלחרר • ועוד",
                 searchTitle: "🔍 חיפוש באתר",
                 searchPlaceholder: "הקלד שם או תיאור...",
                 sectionWelcome: "🌟 ברוכים הבאים למרכז המשפחתי",
@@ -169,7 +169,7 @@
             en: {
                 title: "Family Website - Ben Abou, Elharrar & more",
                 welcomeTitle: "Welcome to the Family Website",
-                welcomeSubtitle: "Ben Abou • Elharrar • Malca • and more",
+                welcomeSubtitle: "Ben Abou • Bromberg • Ellharrar • and more",
                 searchTitle: "🔍 Search the site",
                 searchPlaceholder: "Type a name or description...",
                 sectionWelcome: "🌟 Welcome to the Family Center",
@@ -188,7 +188,7 @@
             fr: {
                 title: "Site de la Famille - Ben Abou, Elharrar et plus",
                 welcomeTitle: "Bienvenue sur le site de la famille",
-                welcomeSubtitle: "Ben Abou • Elharrar • Malca • et plus",
+                welcomeSubtitle: "Ben Abou • Bromberg • Elharrar • et plus",
                 searchTitle: "🔍 Rechercher sur le site",
                 searchPlaceholder: "Tapez un nom ou une description...",
                 sectionWelcome: "🌟 Bienvenue au centre familial",
@@ -207,7 +207,7 @@
             yi: {
                 title: "פאמיליע וועבזייט - בן אבו, אלהרר און מער",
                 welcomeTitle: "ברוך הבא צום פאמיליע וועבזייט",
-                welcomeSubtitle: "בן אבו • אלהרר • מאלקא • און מער",
+                welcomeSubtitle: "בן אבו • ברומברג • אלהרר • און מער",
                 searchTitle: "🔍 זוך אויפן זייט",
                 searchPlaceholder: "שרייב א נאמען אדער באשרייבונג...",
                 sectionWelcome: "🌟 ברוך הבא צום פאמיליע צענטער",
@@ -222,7 +222,33 @@
                 // FIX: Corrected syntax errors (missing commas) in the menus array.
                 menus: ["🏠 הויפּט בלאַט", "ℹ️ דערהייבונגען", "🧬 פאמיליע בוים", "📖 משפּחה בוך", "🧑‍💻 אינטעליגענט טשאַט", "📩 פאמיליע קאנטאקטן", "🖼️ גאלעריע", "🕯️ אנדענק וואנט", "🗓️ צייט-ליניע", "📆 קאלענדאר", "👪 פאמיליע פארום", "📖 ביאגראפיעס", "📊 סטאטיסטיק", "דערהייבן דעטאלן", "הייבן ווידעא", "אינטעליגענט זוך", "מאַפּע פון וואַנדערונגען", "📰 נייַבלאַט", "🔐 איינזיין", "אויסלאגן"],
                 loggedInAs: "אריינגעזען ווי:", role: "ראָלע:", familySide: "פאמיליע זייט:", guest: "גאַסט"
-            }
+            },
+            nl:{
+"title": "Familiewebsite - Ben Abou, Elharrar & meer",
+"welcomeTitle": "Welkom op de Familiewebsite",
+"welcomeSubtitle": "Ben Abou • Bromberg • Elharrar • en meer",
+"searchTitle": "🔍 Zoek op de site",
+"searchPlaceholder": "Typ een naam of beschrijving...",
+"sectionWelcome": "🌟 Welkom bij het Familiecentrum",
+"intro1": "Deze website is gemaakt voor alle families: Ben Abou, Elharrar, Malka, Ben David, Bromberg, Barenbaum, Fass-Schneck, Weinberger, Leibner, van der Velde, Behr, de Vries, Italiaander, Izaks, Chapon, en meer – om foto's, gedenktekens, de stamboom, aankondigingen en meer te delen.",
+"intro2": "Je kunt je aansluiten bij een familielijn, details bijwerken, chatten met de Familie AI Chatbot en samen de gedocumenteerde geschiedenis beleven.",
+"sectionTree": "Welkom bij onze Stamboom",
+"features": [
+"🌳 Interactieve Stamboom","🔐 Gebruikerslogin & toegangsrechten per familielijn","💬 Familiewall voor berichten & reacties","📨 Intern berichtenverkeer","🖼️ Galerijweergave voor documenten & foto's","🕯️ Herdenkingspagina's met digitale kaarsen","🌐 Meertalig Menu","🔍 Slim zoeken","📧 Nieuwsbriefondersteuning","🤖 Familie AI Chat met familiegegevens","📱 Responsief ontwerp voor mobiel"
+],
+"newsTitle": "Nieuws & Updates",
+"news": [
+"Het uploaden van foto's naar de stamboom is nu beschikbaar.",
+"Het interne berichtensysteem is geopend voor alle gebruikers.",
+"Je kunt een digitale kaars aansteken ter nagedachtenis aan dierbaren."
+],
+"footerText": "© 2025 Familiewebsite • Met liefde gebouwd door de familie •",
+"adminLink": "🛠️ Beheerder",
+"menus": [
+"🏠 Startpagina","ℹ️ Updates","🧬 Stamboom","📖 Familieboek","🧑‍💻 AI Chat","📩 Familiecontacten","🖼️ Galerij","🕯️ Herdenkingsmuur","🗓️ Tijdlijn","📆 Kalender","👪 Familieforum","📖 Biografieën","📊 Statistieken","Details Bijwerken","Video Uploaden","AI Zoeken","Migratiekaart","📰 Nieuwsbrief","🔐 Inloggen","Uitloggen"
+],
+"loggedInAs": "Ingelogd als:","role": "Rol:","familySide": "Familielijn:","guest": "Gast"
+}
         };
 
 const updateContent = (lang, isLoggedIn, user) => {
