--- a/public/index.html
+++ b/public/index.html
@@ -47,6 +47,8 @@
                     <option value="en">English</option>
                     <option value="fr">Français</option>
                     <option value="yi">יידיש</option>
+                    <option vaule="nl">Nederlands</option>
+                    <option vaule=>"jb">Coming Soon...</option>
                 </select>
             </div>
             <!-- FIX: Replaced broken image link with a placeholder -->
