--- a/public/index.html
+++ b/public/index.html
@@ -225,32 +225,65 @@
                 menus: ["🏠 הויפּט בלאַט", "ℹ️ דערהייבונגען", "🧬 פאמיליע בוים", "📖 משפּחה בוך", "🧑‍💻 אינטעליגענט טשאַט", "📩 פאמיליע קאנטאקטן", "🖼️ גאלעריע", "🕯️ אנדענק וואנט", "🗓️ צייט-ליניע", "📆 קאלענדאר", "👪 פאמיליע פארום", "📖 ביאגראפיעס", "📊 סטאטיסטיק", "דערהייבן דעטאלן", "הייבן ווידעא", "אינטעליגענט זוך", "מאַפּע פון וואַנדערונגען", "📰 נייַבלאַט", "🔐 איינזיין", "אויסלאגן"],
                 loggedInAs: "אריינגעזען ווי:", role: "ראָלע:", familySide: "פאמיליע זייט:", guest: "גאַסט"
             },
-            nl:{
-"title": "Familiewebsite - Ben Abou, Elharrar & meer",
-"welcomeTitle": "Welkom op de Familiewebsite",
-"welcomeSubtitle": "Ben Abou • Bromberg • Elharrar • en meer",
-"searchTitle": "🔍 Zoek op de site",
-"searchPlaceholder": "Typ een naam of beschrijving...",
-"sectionWelcome": "🌟 Welkom bij het Familiecentrum",
-"intro1": "Deze website is gemaakt voor alle families: Ben Abou, Elharrar, Malka, Ben David, Bromberg, Barenbaum, Fass-Schneck, Weinberger, Leibner, van der Velde, Behr, de Vries, Italiaander, Izaks, Chapon, en meer – om foto's, gedenktekens, de stamboom, aankondigingen en meer te delen.",
-"intro2": "Je kunt je aansluiten bij een familielijn, details bijwerken, chatten met de Familie AI Chatbot en samen de gedocumenteerde geschiedenis beleven.",
-"sectionTree": "Welkom bij onze Stamboom",
-"features": [
-"🌳 Interactieve Stamboom","🔐 Gebruikerslogin & toegangsrechten per familielijn","💬 Familiewall voor berichten & reacties","📨 Intern berichtenverkeer","🖼️ Galerijweergave voor documenten & foto's","🕯️ Herdenkingspagina's met digitale kaarsen","🌐 Meertalig Menu","🔍 Slim zoeken","📧 Nieuwsbriefondersteuning","🤖 Familie AI Chat met familiegegevens","📱 Responsief ontwerp voor mobiel"
-],
-"newsTitle": "Nieuws & Updates",
-"news": [
-"Het uploaden van foto's naar de stamboom is nu beschikbaar.",
-"Het interne berichtensysteem is geopend voor alle gebruikers.",
-"Je kunt een digitale kaars aansteken ter nagedachtenis aan dierbaren."
-],
-"footerText": "© 2025 Familiewebsite • Met liefde gebouwd door de familie •",
-"adminLink": "🛠️ Beheerder",
-"menus": [
-"🏠 Startpagina","ℹ️ Updates","🧬 Stamboom","📖 Familieboek","🧑‍💻 AI Chat","📩 Familiecontacten","🖼️ Galerij","🕯️ Herdenkingsmuur","🗓️ Tijdlijn","📆 Kalender","👪 Familieforum","📖 Biografieën","📊 Statistieken","Details Bijwerken","Video Uploaden","AI Zoeken","Migratiekaart","📰 Nieuwsbrief","🔐 Inloggen","Uitloggen"
-],
-"loggedInAs": "Ingelogd als:","role": "Rol:","familySide": "Familielijn:","guest": "Gast"
-}
+        nl: {
+    title: "Familiewebsite - Ben Abou, Elharrar en meer",
+    welcomeTitle: "Welkom op de familiewebsite",
+    welcomeSubtitle: "Ben Abou • Bromberg • Elharrar • en meer",
+    searchTitle: "🔍 Zoeken op de site",
+    searchPlaceholder: "Typ een naam of beschrijving...",
+    sectionWelcome: "🌟 Welkom in het familiecentrum",
+    intro1: "Deze website is gemaakt voor alle families: Ben Abou, Elharrar, Malka, Ben David, Bromberg, Barenbaum, Fass-Schneck, Weinberger, Leibner, van der Velde, Behr, de Vries, Italiaander, Izaks, Chapon en meer – om foto's, herdenkingen, stamboom, aankondigingen en meer te delen.",
+    intro2: "Je kunt binnenkomen via de familietak, gegevens bijwerken, chatten met de Familie-AI en samen een gedocumenteerde geschiedenis beleven.",
+    sectionTree: "Welkom in onze stamboom",
+    features: [
+        "🌳 Interactieve stamboom",
+        "🔐 Inloggen & rechten per familietak",
+        "💬 Familiewand voor berichten & reacties",
+        "📨 Intern berichtensysteem",
+        "🖼️ Galerie voor documenten & foto's",
+        "🕯️ Herdenkingspagina’s met digitale kaarsen",
+        "🌐 Meertalig menu",
+        "🔍 Slim zoeken",
+        "📧 Nieuwsbrief ondersteuning",
+        "🤖 Familie-AI chat met familiegegevens",
+        "📱 Responsief ontwerp voor mobiel"
+    ],
+    newsTitle: "Nieuws & updates",
+    news: [
+        "Optie toegevoegd om foto's te uploaden in de stamboom.",
+        "Het interne berichtensysteem is nu open voor alle gebruikers.",
+        "Je kunt een digitale kaars aansteken ter nagedachtenis aan je dierbaren."
+    ],
+    footerText: "© 2025 Familiewebsite • Met liefde gebouwd door de familie •",
+    adminLink: "🛠️ Beheer",
+    menus: [
+        "🏠 Startpagina",
+        "ℹ️ Updates",
+        "🧬 Stamboom",
+        "📖 Familieboek",
+        "🧑‍💻 AI Chat",
+        "📩 Familiecontacten",
+        "🖼️ Galerie",
+        "🕯️ Herdenkingsmuur",
+        "🗓️ Tijdlijn",
+        "📆 Kalender",
+        "👪 Familieforum",
+        "📖 Biografieën",
+        "📊 Statistieken",
+        "Bijwerken",
+        "Video uploaden",
+        "AI Zoeken",
+        "Migratiekaart",
+        "📰 Nieuwsbrief",
+        "🔐 Inloggen",
+        "Uitloggen"
+    ],
+    loggedInAs: "Ingelogd als:",
+    role: "Rol:",
+    familySide: "Familietak:",
+    guest: "Gast"
+},
+
         };
 
 const updateContent = (lang, isLoggedIn, user) => {
