--- a/public/index.html
+++ b/public/index.html
@@ -277,12 +277,8 @@
         "📰 Nieuwsbrief",
         "🔐 Inloggen",
         "Uitloggen"
-    ],
-    loggedInAs: "Ingelogd als:",
-    role: "Rol:",
-    familySide: "Familietak:",
-    guest: "Gast"
-}
+        ],
+    loggedInAs: "Ingelogd als:", role: "Rol:", familySide: "Familietak:", guest: "Gast"
         };
 
 const updateContent = (lang, isLoggedIn, user) => {
