--- a/public/index.html
+++ b/public/index.html
@@ -256,12 +256,7 @@
     ],
     footerText: "© 2025 Familiewebsite • Met liefde gebouwd door de familie •",
     adminLink: "🛠️ Beheer",
-    menus: [ "🏠 Startpagina", "ℹ️ Updates", "🧬 Stamboom", "📖 Familieboek", "🧑‍💻 AI Chat",  "📩 Familiecontacten",  "🖼️ Galerie",  "🕯️ Herdenkingsmuur",  "🗓️ Tijdlijn",  "📆 Kalender",  "👪 Familieforum",  "📖 Biografieën",  "📊 Statistieken","Bijwerken""Video uploaden", "AI Zoeken",
-        "Migratiekaart",
-        "📰 Nieuwsbrief",
-        "🔐 Inloggen",
-        "Uitloggen"
-        ],
+    menus: [ "🏠 Startpagina", "ℹ️ Updates", "🧬 Stamboom", "📖 Familieboek", "🧑‍💻 AI Chat",  "📩 Familiecontacten",  "🖼️ Galerie",  "🕯️ Herdenkingsmuur",  "🗓️ Tijdlijn",  "📆 Kalender",  "👪 Familieforum",  "📖 Biografieën",  "📊 Statistieken","Bijwerken""Video uploaden", "AI Zoeken", "Migratiekaart", "📰 Nieuwsbrief", "🔐 Inloggen", "Uitloggen" ],
     loggedInAs: "Ingelogd als:", role: "Rol:", familySide: "Familietak:", guest: "Gast"
         };
 
