--- a/public/index.html
+++ b/public/index.html
@@ -235,12 +235,7 @@
     intro1: "Deze website is gemaakt voor alle families: Ben Abou, Elharrar, Malka, Ben David, Bromberg, Barenbaum, Fass-Schneck, Weinberger, Leibner, van der Velde, Behr, de Vries, Italiaander, Izaks, Chapon en meer – om foto's, herdenkingen, stamboom, aankondigingen en meer te delen.",
     intro2: "Je kunt binnenkomen via de familietak, gegevens bijwerken, chatten met de Familie-AI en samen een gedocumenteerde geschiedenis beleven.",
     sectionTree: "Welkom in onze stamboom",
-    features: ["🌳 Interactieve stamboom", "🔐 Inloggen & rechten per familietak", "💬 Familiewand voor berichten & reacties", "📨 Intern berichtensysteem", "🖼️ Galerie voor documenten & foto's", "🕯️ Herdenkingspagina’s met digitale kaarsen", "🌐 Meertalig menu",
-        "🔍 Slim zoeken",
-        "📧 Nieuwsbrief ondersteuning",
-        "🤖 Familie-AI chat met familiegegevens",
-        "📱 Responsief ontwerp voor mobiel"
-    ],
+    features: ["🌳 Interactieve stamboom", "🔐 Inloggen & rechten per familietak", "💬 Familiewand voor berichten & reacties", "📨 Intern berichtensysteem", "🖼️ Galerie voor documenten & foto's", "🕯️ Herdenkingspagina’s met digitale kaarsen", "🌐 Meertalig menu", "🔍 Slim zoeken", "📧 Nieuwsbrief ondersteuning", "🤖 Familie-AI chat met familiegegevens", "📱 Responsief ontwerp voor mobiel"],
     newsTitle: "Nieuws & updates",
     news: [
         "Optie toegevoegd om foto's te uploaden in de stamboom.",
