Update Dutch translations and fix syntax errors

--- a/public/index.html
+++ b/public/index.html
@@ -224,29 +224,61 @@
                 menus: ["🏠 הויפּט בלאַט", "ℹ️ דערהייבונגען", "🧬 פאמיליע בוים", "📖 משפּחה בוך", "🧑‍💻 אינטעליגענט טשאַט", "📩 פאמיליע קאנטאקטן", "🖼️ גאלעריע", "🕯️ אנדענק וואנט", "🗓️ צייט-ליניע", "📆 קאלענדאר", "👪 פאמיליע פארום", "📖 ביאגראפיעס", "📊 סטאטיסטיק", "דערהייבן דעטאלן", "הייבן ווידעא", "אינטעליגענט זוך", "מאַפּע פון וואַנדערונגען", "📰 נייַבלאַט", "🔐 איינזיין", "אויסלאגן"],
                 loggedInAs: "אריינגעזען ווי:", role: "ראָלע:", familySide: "פאמיליע זייט:", guest: "גאַסט"
             },
-        nl: {
-    title: "Familiewebsite - Ben Abou, Elharrar en meer",
-    welcomeTitle: "Welkom op de familiewebsite",
-    welcomeSubtitle: "Ben Abou • Bromberg • Elharrar • en meer",
-    searchTitle: "🔍 Zoeken op de site",
-    searchPlaceholder: "Typ een naam of beschrijving...",
-    sectionWelcome: "🌟 Welkom in het familiecentrum",
-    intro1: "Deze website is gemaakt voor alle families: Ben Abou, Elharrar, Malka, Ben David, Bromberg, Barenbaum, Fass-Schneck, Weinberger, Leibner, van der Velde, Behr, de Vries, Italiaander, Izaks, Chapon en meer – om foto's, herdenkingen, stamboom, aankondigingen en meer te delen.",
-    intro2: "Je kunt binnenkomen via de familietak, gegevens bijwerken, chatten met de Familie-AI en samen een gedocumenteerde geschiedenis beleven.",
-    sectionTree: "Welkom in onze stamboom",
-    features: ["🌳 Interactieve stamboom", "🔐 Inloggen & rechten per familietak", "💬 Familiewand voor berichten & reacties", "📨 Intern berichtensysteem", "🖼️ Galerie voor documenten & foto's", "🕯️ Herdenkingspagina’s met digitale kaarsen", "🌐 Meertalig menu", "🔍 Slim zoeken", "📧 Nieuwsbrief ondersteuning", "🤖 Familie-AI chat met familiegegevens", "📱 Responsief ontwerp voor mobiel"],
-    newsTitle: "Nieuws & updates",
-    news: [
-        "Optie toegevoegd om foto's te uploaden in de stamboom.",
-        "Het interne berichtensysteem is nu open voor alle gebruikers.",
-        "Je kunt een digitale kaars aansteken ter nagedachtenis aan je dierbaren."
-    ],
-    footerText: "© 2025 Familiewebsite • Met liefde gebouwd door de familie •",
-    adminLink: "🛠️ Beheer",
-    menus: [ "🏠 Startpagina", "ℹ️ Updates", "🧬 Stamboom", "📖 Familieboek", "🧑‍💻 AI Chat",  "📩 Familiecontacten",  "🖼️ Galerie",  "🕯️ Herdenkingsmuur",  "🗓️ Tijdlijn",  "📆 Kalender",  "👪 Familieforum",  "📖 Biografieën",  "📊 Statistieken","Bijwerken","Video uploaden", "AI Zoeken", "Migratiekaart", "📰 Nieuwsbrief", "🔐 Inloggen", "Uitloggen" ],
-    loggedInAs: "Ingelogd als:", role: "Rol:", familySide: "Familietak:", guest: "Gast"
-      
-        }
+    nl: {
+  title: "Familiewebsite - Ben Abou, Elharrar en meer",
+  welcomeTitle: "Welkom op de familiepagina",
+  welcomeSubtitle: "Ben Abou • Bromberg • Elharrar • en meer",
+  searchTitle: "🔍 Zoeken op de site",
+  searchPlaceholder: "Typ een naam of beschrijving...",
+  sectionWelcome: "Welkom bij onze familiegeschiedenis! Hier vind je stambomen, foto's, documenten en verhalen die generaties verbinden.",
+  sectionDiscover: "Ontdek de familiebanden, leer over onze oorsprong, en deel je eigen herinneringen.",
+  featuresTitle: "✨ Belangrijkste functies",
+  features: [
+    "Interactieve stamboomweergave",
+    "AI-chat voor genealogische vragen",
+    "Familiezoeker met slimme filters",
+    "Upload en deel foto's en documenten",
+    "Bekijk familiegebeurtenissen op de kalender",
+    "Vertaalbare inhoud (Hebreeuws / Engels / Frans / Nederlands)"
+  ],
+  familyTreeTitle: "🌳 Familiebomen",
+  familySides: [
+    "Ben Abou-familie",
+    "Elharrar-familie",
+    "Weinberger-Leibner-familie",
+    "Bromberg-Barenbaum-familie",
+    "Fass-Schneck-familie",
+    "van der Velde–Behr–de Vries–Italiaander–Izaks–Chapon"
+  ],
+  newsTitle: "📰 Laatste nieuws",
+  news: [
+    "Nieuwe foto's toegevoegd aan de Bromberg-familietak",
+    "Familie-evenement in voorbereiding — binnenkort meer details",
+    "AI-ondersteuning voor genealogische zoekopdrachten is nu actief"
+  ],
+  footer: "© 2025 Familieproject Ben Abou & Elharrar – Alle rechten voorbehouden",
+  menus: [
+    "🏠 Startpagina",
+    "🌳 Stamboom",
+    "📷 Gallerij",
+    "🗺️ Migratiekaart",
+    "🧠 AI & Chat",
+    "📅 Kalender",
+    "📧 Postvak",
+    "⚙️ Beheer",
+    "📊 Statistieken",
+    "Bijwerken",
+    "🎥 Video uploaden"
+  ],
+  login: "Inloggen",
+  logout: "Uitloggen",
+  language: "Taal:",
+  loggedInAs: "Ingelogd als:",
+  role: "Rol:",
+  familySide: "Familietak:",
+  guest: "Gast"
+},
+
               };
 
 const updateContent = (lang, isLoggedIn, user) => {
