Fix typo in Dutch option value in index.html

--- a/public/index.html
+++ b/public/index.html
@@ -47,7 +47,7 @@
                     <option value="en">English</option>
                     <option value="fr">Français</option>
                     <option value="yi">יידיש</option>
-                    <option vaule="nl">Nederlands</option>
+                    <option value="nl">Nederlands</option>
                 </select>
             </div>
             <!-- FIX: Replaced broken image link with a placeholder -->
